content/v1.3.0/en/api/mission-ext/SpawnerEntityEditorHelper.md
---
title: "SpawnerEntityEditorHelper"
description: "Auto-generated class reference for SpawnerEntityEditorHelper."
---
# SpawnerEntityEditorHelper

**Namespace:** TaleWorlds.MountAndBlade
**Module:** TaleWorlds.MountAndBlade
**Type:** `public class SpawnerEntityEditorHelper`
**Base:** none
**File:** `TaleWorlds.MountAndBlade/SpawnerEntityEditorHelper.cs`

## Overview

`SpawnerEntityEditorHelper` is a helper class that usually provides static logic which does not depend on instance state.

## Mental Model

Treat `SpawnerEntityEditorHelper` as a Helper-style extension point: first identify who creates it, who owns it, and who calls it, then decide whether you should subclass it, compose it, or only read from it.

## Key Properties

| Name | Signature |
|------|-----------|
| `IsValid` | `public bool IsValid { get; }` |
| `SpawnedGhostEntity` | `public GameEntity SpawnedGhostEntity { get; }` |

## Key Methods

### GetGhostEntityOrChild
`public GameEntity GetGhostEntityOrChild(string name)`

**Purpose:** Reads and returns the `ghost entity or child` value held by the current object.

```csharp
// Obtain an instance of SpawnerEntityEditorHelper from the subsystem API first
SpawnerEntityEditorHelper spawnerEntityEditorHelper = ...;
var result = spawnerEntityEditorHelper.GetGhostEntityOrChild("example");
```

### Tick
`public void Tick(float dt)`

**Purpose:** Advances the current object's state by one frame or update cycle.

```csharp
// Obtain an instance of SpawnerEntityEditorHelper from the subsystem API first
SpawnerEntityEditorHelper spawnerEntityEditorHelper = ...;
spawnerEntityEditorHelper.Tick(0);
```

### GivePermission
`public void GivePermission(string childName, SpawnerEntityEditorHelper.Permission permission, Action<float> onChangeFunction)`

**Purpose:** Performs the operation described by this method.

```csharp
// Obtain an instance of SpawnerEntityEditorHelper from the subsystem API first
SpawnerEntityEditorHelper spawnerEntityEditorHelper = ...;
spawnerEntityEditorHelper.GivePermission("example", permission, onChangeFunction);
```

### ChangeStableChildMatrixFrameAndApply
`public void ChangeStableChildMatrixFrameAndApply(string childName, MatrixFrame matrixFrame, bool updateTriad = true)`

**Purpose:** Performs the operation described by this method.

```csharp
// Obtain an instance of SpawnerEntityEditorHelper from the subsystem API first
SpawnerEntityEditorHelper spawnerEntityEditorHelper = ...;
spawnerEntityEditorHelper.ChangeStableChildMatrixFrameAndApply("example", matrixFrame, false);
```

### GetPrefabName
`public string GetPrefabName()`

**Purpose:** Reads and returns the `prefab name` value held by the current object.

```csharp
// Obtain an instance of SpawnerEntityEditorHelper from the subsystem API first
SpawnerEntityEditorHelper spawnerEntityEditorHelper = ...;
var result = spawnerEntityEditorHelper.GetPrefabName();
```

### SetupGhostMovement
`public void SetupGhostMovement(string pathName)`

**Purpose:** Assigns a new value to `up ghost movement` and updates the object's internal state.

```csharp
// Obtain an instance of SpawnerEntityEditorHelper from the subsystem API first
SpawnerEntityEditorHelper spawnerEntityEditorHelper = ...;
spawnerEntityEditorHelper.SetupGhostMovement("example");
```

### SetEnableAutoGhostMovement
`public void SetEnableAutoGhostMovement(bool enableAutoGhostMovement)`

**Purpose:** Assigns a new value to `enable auto ghost movement` and updates the object's internal state.

```csharp
// Obtain an instance of SpawnerEntityEditorHelper from the subsystem API first
SpawnerEntityEditorHelper spawnerEntityEditorHelper = ...;
spawnerEntityEditorHelper.SetEnableAutoGhostMovement(false);
```

## Usage Example

```csharp
SpawnerEntityEditorHelper.Initialize();
```

## See Also

- [Area Index](../)